Add initial implementation of audit logging and approval models